upgraded gradle and fixed bootrun task